Resize handle simplified as it was just causing issues. Fixed on Safari and webkit browsers thanks to the peculiar animation behaviour that always pulled it out of hover-reach! Also, Vite now hosts on the network as well, so I can directly access the dev server on my iPhone to test Safari, and then use `ios-safari-remote-debug-kit` to debug it with the dev tools directly on my laptop!

--- a/frontend/styles/app.css
+++ b/frontend/styles/app.css
@@ -262,7 +262,7 @@ smorgas-board {
         }
 
         & ::part(resize-handle) {
-            stroke-width: 2rem;
+            stroke-width: 1.5rem;
         }
 
         & ::part(icon-button) {
@@ -271,7 +271,7 @@ smorgas-board {
             padding: 1rem;
         }
 
-        & panel-element:not(panel-element.configuring):hover::part(panel-body) {
+        & panel-element:not(panel-element.configuring, panel-element.snapping):hover::part(panel-body) {
             inset: 0;
             width: 100%;
             height: 100%;
